[gd_scene load_steps=8 format=3 uid="uid://drqyrkt6rv3xv"]

[ext_resource type="Script" path="res://entities/enemy_turrets/enemy_wisp.gd" id="1_ltqhk"]
[ext_resource type="Texture2D" uid="uid://q2ibsvmfnoyi" path="res://assets_sprites/New_enemy_sprites/Sudden Recitation/Enemy_SuddenRecitationEnemy_64x64.png.png" id="2_3mbw8"]
[ext_resource type="PackedScene" uid="uid://brcmthhoohsbe" path="res://entities/projectiles/delayed_aoe.tscn" id="3_rui0l"]
[ext_resource type="PackedScene" uid="uid://2lj432wb2lwv" path="res://entities/enemy_turrets/temporary_components/label_hp.tscn" id="4_6313f"]

[sub_resource type="SpriteFrames" id="SpriteFrames_eqwra"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3mbw8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ipe4"]
size = Vector2(46, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7ol7"]
size = Vector2(1800, 1400)

[node name="enemy_wisp" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_ltqhk")
max_hp = 5

[node name="Rotator" type="Node2D" parent="."]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Rotator"]
rotation = -1.5708
scale = Vector2(-1, 1)
remote_path = NodePath("../../AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.57079
scale = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_eqwra")
frame_progress = 0.484537

[node name="delayed_aoe" parent="." instance=ExtResource("3_rui0l")]

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0
default_color = Color(1, 1, 1, 0.647059)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_8ipe4")

[node name="RayCast2D_Player" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 3

[node name="Area2D_PlayerNearby" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_PlayerNearby"]
shape = SubResource("RectangleShape2D_a7ol7")
debug_color = Color(0, 0.729412, 0.854902, 0.0588235)

[node name="Timer_Reload" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Timer_Line" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Label_HP" parent="." instance=ExtResource("4_6313f")]
offset_left = -8.0
offset_top = 29.0
offset_right = 12.0
offset_bottom = 43.0

[connection signal="body_entered" from="Area2D_PlayerNearby" to="." method="_on_area_2d_player_nearby_body_entered"]
[connection signal="body_exited" from="Area2D_PlayerNearby" to="." method="_on_area_2d_player_nearby_body_exited"]
[connection signal="timeout" from="Timer_Reload" to="." method="_on_timer_reload_timeout"]
[connection signal="timeout" from="Timer_Line" to="." method="_on_timer_line_timeout"]
